render: Move figure management into new class
This change moves responsibility for managing and containing a set of
figure associations out of the viewport class into a new 'scene' class.
Instead of being constructed against a specific viewport, figures are
now constructed against a 'scene' object, to which one or more viewports
may attach themselves. Viewports can change their scene attachment at
any time.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,6 +166,7 @@ add_executable (drnsf
     src/gl_error.cc
 
     src/render.hh
+    src/render_scene.cc
     src/render_viewport.cc
     src/render_figure.cc
     src/render_reticle_fig.cc
