--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,7 @@ add_executable (drnsf
     src/render_meshanim_fig.cc
     src/render_model_fig.cc
     src/render_world_fig.cc
+    src/render_zone_box_fig.cc
 
     src/edit.hh
     src/edit_context.cc
