Add zone octree renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,8 @@ add_executable (drnsf
     src/render_model_fig.cc
     src/render_world_fig.cc
     src/render_zone_box_fig.cc
+    src/render_zone_octree_fig.cc
+    src/render_zone_fig.cc
 
     src/edit.hh
     src/edit_context.cc
