--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
+            - libx11-dev
+            - libgl1-mesa-dev
             - libepoxy-dev
             - libcairo2-dev
       env:
@@ -20,6 +22,8 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-7
+            - libx11-dev
+            - libgl1-mesa-dev
             - libepoxy-dev
             - libcairo2-dev
       env:
