Switch CMake from FindPythonInterp to FindPython3
This change (requiring CMake 3.12) fixes issues finding Python 3 when
the system default is Python 2, such as on some debian and ubuntu
systems as well as the travis-ci xenial build environment.

Workarounds for this issue are removed from the README and CI/CD
configurations.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,6 @@ matrix:
 script:
   - mkdir build
   - cd build
-  - cmake .. -DPYTHON_EXECUTABLE="$(which python3)"
+  - cmake ..
   - make
   - ./drnsf :internal-test
