Add "New" asset tool for creating assets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,6 +204,7 @@ add_executable (drnsf
     src/edit_mode_assets_mainctl.cc
     src/edit_mode_map.hh
     src/edit_mode_map_mainctl.cc
+    src/edit_assettool_new.hh
     src/edit_assettool_main.hh
     src/edit_mode_window.cc
 
