--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,7 @@ after_build:
   - copy ..\extra\autodep_licenses\pixman.txt pkg\lib_licenses\pixman.txt
   - copy ..\extra\autodep_licenses\libpng.txt pkg\lib_licenses\libpng.txt
   - copy ..\extra\autodep_licenses\zlib.txt pkg\lib_licenses\zlib.txt
+  - if %CONFIGURATION%==Debug (copy .\%CONFIGURATION%\drnsf.pdb pkg)
   - 7z a drnsf.zip .\pkg\*
   - move drnsf.zip ..\drnsf-%APPVEYOR_BUILD_NUMBER%-%APPVEYOR_REPO_COMMIT%-%PLATFORM%-%CONFIGURATION%.zip
   - cd ..
