--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 version: appveyor-{build}
-image: Visual Studio 2017
+image: Visual Studio 2019
 shallow_clone: true
 environment:
   DRNSF_S3DEPLOY_ACCESSKEY_ID:
@@ -13,8 +13,8 @@ platform:
   - x86
   - x64
 before_build:
-  - if %PLATFORM%==x86 (set cmake_opts= -G"Visual Studio 15 2017")
-  - if %PLATFORM%==x64 (set cmake_opts= -G"Visual Studio 15 2017 Win64")
+  - if %PLATFORM%==x86 (set cmake_opts= -G"Visual Studio 16 2019" -A Win32)
+  - if %PLATFORM%==x64 (set cmake_opts= -G"Visual Studio 16 2019" -A x64)
   - set cmake_opts=%cmake_opts% -DAUTOMATIC_DEPS=ON
   - set cmake_opts=%cmake_opts% -DSTATIC_MSVC_RUNTIME=ON
   - mkdir build
