Add support for C1 WGEO entries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,6 +222,7 @@ add_executable (drnsf
     src/nsf_spage.cc
     src/nsf_entry.cc
     src/nsf_raw_entry.cc
+    src/nsf_wgeo_v1.cc
     src/nsf_wgeo_v2.cc
 
     $<TARGET_OBJECTS:imgui>
